# -

./: README.md
.config/: crontab
.config/fish/: config.fish
.config/gtk-2.0/: gtkrc
.config/gtk-3.0/: settings.ini
.config/mako/: config
.config/mpv/: input.conf
.config/rofi/: config.rasi
.config/sway/: config
.config/swaylock/: config
.config/termite/: config
.config/waybar/: config  style.css  waybar.sh
.progs/vide/: absinit.vim  checklist.md  coc-settings.json  filetype.vim  ftplugin.vim  init.vim  seen.md  tags  tags-cn
.progs/vide/wip_plugins/filetree/: Cargo.toml  init.vim
.progs/vide/wip_plugins/filetree/autoload/: filetree.vim
.progs/vide/wip_plugins/filetree/autoload/filetree/: ctrl.vim  evt.vim  sys.vim
.progs/vide/wip_plugins/filetree/plugin/: filetree.vim
.progs/vide/wip_plugins/filetree/src/: event.rs  handler.rs  main.rs
.progs/vide/wip_plugins/filetree/src/event_handlers/: search.rs
.scripts/: deploy-home-config  dropdown.spawn  upfind
.scripts/arch/: arch-install  archive-home-config  backup-home-config  extract-home-config-readme  install-home-config
.scripts/cron/: sys-backup
.scripts/sway/: kbd  keyboard-layout  lock  screenrec  screenshot  sway_kbd
.scripts/sys/: +x  :c  crontab-update  fkill  l  linkhandler  vimb
.scripts/zbx/: :c  check-strings-orig.sh  check-strings.sh  efm-langserver  gen-autoload.sh  git-wt.sh  son  son-to-json  sys,beep  v  v2  vide  vim4php-  vimfluence  zbx!delete-merged  zbx!update-to-latest-from  zbx,clip  zbx,db  zbx,git  zbx,jira  zbx,pr  zbx,test  zbx,web  zbx.-h  zbx.commit  (+15 more)
(+42 files in other folders)
