[package]
name = "ctrlp-rs"
description = "A rust clone of the original CTRL-P for neovim."
version = "0.1.0"
authors = ["Arne Beer <arne@twobeer.de>"]
repository = "https://github.com/nukesor/ctrl-p-rs"
license = "MIT"
edition = "2018"

[dependencies]
neovim-lib = "0.6.1"
log = "0.4.6"
simplelog = "0.5.3"
strum = "0.15.0"
